<resources>
    <string name="app_name">Geofencer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_geofence">Add a Geofence</string>
    <string name="geofence_name">Geofence Name</string>
    <string name="area">Radius</string>
    <string name="_350_m">350 m</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="alert">Alert</string>
    <string name="moving_inside_the_geofence">Inside the Geofence</string>
    <string name="time_spent_in_the_geofence">Time spent in the geofence</string>
    <string name="moving_outside_the_geofence">Outside the Geofence</string>
    <string name="add">Add</string>
    <string name="my_geofences">My Geofences</string>
    <string name="notifications">Notifications</string>
</resources>